tests/cases/compiler-development/artifact/errors/diagnostic-ownership-vector-dynamic-move.diagnostic
diagnostic error code=O0001 family=ownership message="moving owning aggregate elements through dynamic indexes is not supported; use a constant index or move the whole aggregate" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-ownership-vector-dynamic-move.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-ownership-vector-dynamic-move.ari" bytes=227
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-ownership-vector-dynamic-move.ari" line=8 column=21 end_line=8 end_column=22 byte_start=175 byte_end=176 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-ownership-vector-dynamic-move.ari:8:21\n   |\n 8 |   let first = values[index];\n   |                     ^"
